Desktop layout complete.

--- a/index.html
+++ b/index.html
@@ -11,20 +11,109 @@
     <link rel="icon" href="./favicon.png" type="image/x-icon">
   </head>
   <body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- "Navigation Section" -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Explore</a></li>
+          <li><a href="#">Start a project</a></li>
+          <li><a href="#">About us</a></li>
+        </ul>
+            <img class="navbar-brand navbar-right collapse navbar-collapse" src="./resources/images/logo.png" alt="Jumpstart">
+      </div>
+    </nav>
+    <!-- "Jumbotron Section" -->
+    <div class="jumbotron jumbotron-bike">
+      <div class="container">
+        <h1>Get Going</h1>
+        <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Jump in</a>
+        </div>
+      </div>
+    </div>
+    <!-- "Featured Project Section" -->
+    <div class="container featured-project">
+      <div class="row">
+        <h2 class="col-xs-12">Featured project</h2>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
+          <div class="image-container">
+            <a href="#">
+              <img src="./resources/images/featured-project.png">
+            </a>
+          </div>
+        </div>
+        <div class="col-xs-6 col-md-3">
+          <h3>DeFrost: A Documentary</h3>
+          <p>by Leo De Firenze</p>
+          <p>DeFrost is a documentary about growing up in a little red house in a cold, harsh valley. This is a story about my mother's childhood. This film attempts to capture vignettes of her upbringing â€” her family, friends, pets, and eventual depature from a freezing valley in Northern Italy â€” through beautiful cinematography and narration.</p>
+        </div>
+        <div class="col-xs-6 col-md-3 categories">
+          <h3>Product Categories</h3>
+          <ul>
+            <li>Books</li>
+            <li>Crystals</li>
+            <li>Design</li>
+            <li>Art</li>
+            <li>Doodles</li>
+            <li>Deedlybobs</li>
+            <li>Farming</li>
+            <li>Gadgets</li>
+            <li>Hoverboards</li>
+            <li>Jams, Jellies, Etc.</li>
+            <li>Magazines</li>
+            <li>Plants</li>
+            <li>Snake & Snake Equipment</li>
+            <li>Tables</li>
+            <li>Ventriliquist Figures</li>
+            <li>Yoyos</li>
+          </ul>
+        </div>
+      </div>
+      <!-- "Projects Section" -->
+      <div class="row">
+        <h2 class="col-xs-12">Projects</h2>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-4 project">
+          <div class="image-container">
+            <a href="#">
+              <img src="./resources/images/project1.png">
+            </a>
+          </div>
+          <h3>The Right Tights</h3>
+          <p>by Riley Mae</p>
+          <p>These tights are 50 denier, beautifully constructed, hand-dyed, and guaranteed to last (no more ladders!). Made with high quality, completely toxic-free materials. Custom colors available to all backers.</p>
+        </div>
+        <div class="col-xs-12 col-sm-4 project">
+          <div class="image-container">
+            <a href="#">
+              <img src="./resources/images/project2.png">
+            </a>
+          </div>
+          <h3>Peppermint Smart Home</h3>
+          <p>by Brian McDonald</p>
+          <p>Instantly upgrade your home with technology that keeps your family and home safe. We've made Peppermint easy to use. Just talk to your phone and Peppermint will help you every step of the way.</p>
+        </div>
+        <div class="col-xs-12 col-sm-4 project">
+          <div class="image-container">
+            <a href="#">
+              <img src="./resources/images/project3.png">
+            </a>
+          </div>
+          <h3>American Streetlife</h3>
+            <p>by Patrick Wallace</p>
+            <p>I've been traveling around the United States for the past two years. I've slept on hundreds of couches, more than a few benches, and captured my experiences in this 120 page photo album.</p>
+          </div>
+        </div>
+      </div>
+      <!-- "Footer Section" -->
+      <div class="container-fluid help">
+        <strong>Having trouble thinking of an idea?</strong>
+        <p>Investor block strikes at the worst times. But that's all changed with Jumpstart Good Idea Generator Life (GIGLi).</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Learn More</a>
+      </div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
