jQuery Carousel Working.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Jumpstart</title>
-    <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.css"/>
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,700" rel="stylesheet">
     <link rel="icon" href="./favicon.png" type="image/x-icon">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,700" rel="stylesheet">
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./resources/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
   </head>
   <body>
     <!-- "Navigation Section" -->
@@ -23,11 +27,33 @@
       </div>
     </nav>
     <!-- "Jumbotron Section" -->
-    <div class="jumbotron jumbotron-bike">
-      <div class="container">
-        <h1>Get Going</h1>
-        <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Jump in</a>
+    <div class="carousel">
+      <div class="jumbotron jumbotron-bike">
+        <div class="container">
+          <h1>GET GOING.</h1>
+          <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Jump in</a>
+        </div>
+      </div>
+      <div class="jumbotron jumbotron-beer">
+        <div class="container">
+          <h1>GET THINKING.</h1>
+          <p>Meet like-minded individuals who will help fuel your creative juices.</p>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Jump in</a>
+        </div>
+      </div>
+      <div class="jumbotron jumbotron-flowers">
+        <div class="container">
+          <h1>GET CREATING.</h1>
+          <p>Stop overthinking projects and begin putting them out into the world.</p>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Jump in</a>
+        </div>
+      </div>
+      <div class="jumbotron jumbotron-duffel">
+        <div class="container">
+          <h1>GET STARTED.</h1>
+          <p>What are you waiting for? Today's the day for your next big idea.</p>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Jump in</a>
         </div>
       </div>
     </div>
@@ -114,11 +140,12 @@
         <p>Investor block strikes at the worst times. But that's all changed with Jumpstart Good Idea Generator Life (GIGLi).</p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn More</a>
       </div>
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.min.js"
-      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-      crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.min.js"></script>
-    <script src="./resources/js/main.js"></script>
+      <!-- JavaScript -->
+      <script
+        src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
+      <script type="text/javascript" src="resources/slick/slick.min.js"></script>
+      <script src="./resources/js/main.js"></script>
   </body>
 </html>
