--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./resources/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <!-- "Navigation Section" -->
@@ -32,30 +33,29 @@
         <div class="container">
           <h1>GET GOING.</h1>
           <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
-          <a class="btn btn-primary btn-lg" href="#" role="button">Jump in</a>
         </div>
       </div>
       <div class="jumbotron jumbotron-beer">
         <div class="container">
           <h1>GET THINKING.</h1>
           <p>Meet like-minded individuals who will help fuel your creative juices.</p>
-          <a class="btn btn-primary btn-lg" href="#" role="button">Jump in</a>
         </div>
       </div>
       <div class="jumbotron jumbotron-flowers">
         <div class="container">
           <h1>GET CREATING.</h1>
           <p>Stop overthinking projects and begin putting them out into the world.</p>
-          <a class="btn btn-primary btn-lg" href="#" role="button">Jump in</a>
         </div>
       </div>
       <div class="jumbotron jumbotron-duffel">
         <div class="container">
           <h1>GET STARTED.</h1>
           <p>What are you waiting for? Today's the day for your next big idea.</p>
-          <a class="btn btn-primary btn-lg" href="#" role="button">Jump in</a>
         </div>
       </div>
+    </div>
+    <div class="relative-wrapper">
+      <a class="btn btn-primary btn-lg" href="#" role="button">Jump in</a>
     </div>
     <!-- "Featured Project Section" -->
     <div class="container featured-project">
